@@ -87,12 +87,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
- * mod_mime: Detect invalid use of MultiviewsMatch inside Location and
-   LocationMatch sections.  
-   PR47754.
-   Trunk Patch: https://svn.apache.org/viewcvs.cgi?view=rev&rev=814728
-   2.2.x Patch: http://people.apache.org/~poirier/PR47754-2.2.x-patch.txt
-   +1: poirier, rpluem, minfrin
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
